remove list.html templates

--- a/app/tmpl/base.html
+++ b/app/tmpl/base.html
@@ -40,12 +40,12 @@
 	      <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Opciones <span class="caret"></span></a>
 	      <ul class="dropdown-menu">
                 {{ if .User.IsAdmin}}
-		<li><a href="/users/list">Usuarios</a></li>
-		<li><a href="/questions/list">Preguntas</a></li>
+		<li><a href="/users/main">Usuarios</a></li>
+		<li><a href="/questions/main">Preguntas</a></li>
 		<li><a href="/tests/new">Tests</a></li>
                 {{end}}
 		{{ if .User.IsTeacher}}
-		<li><a href="/questions/list">Preguntas</a></li>
+		<li><a href="/questions/main">Preguntas</a></li>
 		<li><a href="/tests/new">Tests</a></li>
 		{{end}}
 		<li><a href="/help">Ayuda</a></li>
