--- a/appengine/questions/tmpl/edit.html
+++ b/appengine/questions/tmpl/edit.html
@@ -3,7 +3,7 @@
 <div class="form-group col-md-12">
   <div class="row col-md-12 ">
     <ul class="nav nav-pills text-right">
-      <li role="presentation" class="active"><a href="/questions/list" >Volver</a></li>
+      <li role="presentation" class="active"><a href="/questions/main" >Volver</a></li>
     </ul>
   </div>
 </div>
