--- a/app/tmpl/base.html
+++ b/app/tmpl/base.html
@@ -6,12 +6,14 @@
     <meta name="format-detection" content="telephone=no">
     <meta charset="utf-8">
 
+    <link rel="stylesheet" href="//code.jquery.com/ui/1.11.4/themes/smoothness/jquery-ui.css">
     <link rel="stylesheet" href="/css/bootstrap.min.css">
     <link rel="stylesheet" href="/css/bootstrap-theme.min.css">
     <link rel="stylesheet" href="/css/chex.css">
 
     
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+    <script src="https://code.jquery.com/ui/1.11.4/jquery-ui.js"></script>
     <script src="/js/bootstrap.min.js"></script>
     <script src="/js/chex.js"></script>
 
