--- a/appengine/questions/tmpl/edit.html
+++ b/appengine/questions/tmpl/edit.html
@@ -56,7 +56,7 @@
 
       <div class="form-group">
 	<label>Etiquetas</label>
-	<input type="text" class="form-control" name="Tags" placeholder="Escríbelas separadas por comas" value="{{.Content.GetStringTags}}">
+	<input type="text" class="form-control input-tags" name="Tags" placeholder="Escríbelas separadas por comas" value="{{.Content.GetStringTags}}">
       </div>
 
       <div class="form-group text-right">
