--- a/appengine/users/tmpl/edit.html
+++ b/appengine/users/tmpl/edit.html
@@ -53,7 +53,7 @@
 
       <div class="form-group">
 	<label>Etiquetas</label>
-	<input type="email" class="form-control input-tags" name="Tags" placeholder="Escríbelas separadas por comas" value="{{.Content.GetStringTags}}">
+	<input type="text" class="form-control input-tags" name="Tags" placeholder="Escríbelas separadas por comas" value="{{.Content.GetStringTags}}">
       </div>
 
       <div class="form-group text-right">
@@ -85,7 +85,5 @@
 {{end}}
 
 </div>
-
-
 
 {{end}}
