improving teacher dashboard

--- a/app/tmpl/teacherWelcome.html
+++ b/app/tmpl/teacherWelcome.html
@@ -1,11 +1,75 @@
 {{define "content"}}
 
 <div class="container" id="content">
-  <div class="page-header ">
-    <h1 class="text-left">Bienvenido {{.User.Name}}</h1>
-    <div class="well well-sm entete"></div>
+
+  <!-- Questions panel  -->
+  <div class="panel panel-default">
+    <div class="panel-heading panel-title">Preguntas</div>
+    <div class="panel-body">
+
+      <div class="row col-md-7">
+	<div id="QuestionsPanel" class="panel-list panel-select-questions">
+	  <div class="panel panel-default panel-list-main">
+	    <ul class="list-group results">
+	    </ul>
+	  </div>
+	  <div class="panel label-panel tags">
+	  </div>
+	</div>
+      </div>
+
+
+      <div class="row col-md-5 pull-right">
+	<ul class="list-group">
+	  <li class="list-group-item"><span class="badge">0</span>Preguntas creadas</li>
+	</ul>
+
+	<div class="btn-group" role="group" aria-label="...">
+	  <a href="/questions/new" class="btn btn-default">Nueva</a>
+	  <button type="button" id="deleteQuestions" class="btn btn-default">Borrar</button>
+	</div>
+      </div>
+    </div>
   </div>
 
-  <p>Eres un profesor</p>
+
+
+
+
+  <!-- Tests panel  -->
+  <div class="panel panel-default">
+    <div class="panel-heading panel-title">Exámenes</div>
+    <div class="panel-body">
+
+      
+
+    </div>
+  </div>
+
+
+  <!-- Marks panel  -->
+  <div class="panel panel-default">
+    <div class="panel-heading panel-title">Calificaciones</div>
+    <div class="panel-body">
+
+      
+
+    </div>
+  </div>
+
+
+
+
 </div>
+
+
+<script>
+ 
+questionsList.init()
+
+$("#deleteQuestions").on("click",function(){
+  console.log(questionsList.getSelected()) 
+})
+
+</script>
 {{end}}
