--- a/app/tmpl/base.html
+++ b/app/tmpl/base.html
@@ -36,7 +36,8 @@
 	<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 	  
 	  <ul class="nav navbar-nav navbar-right">
-            <li><a href="/users/me">{{.User.Mail}}</a></li>
+            <!-- <li><a href="/users/me">{{.User.Mail}}</a></li>-->
+	    <li><a href="/users/me">{{.User.Name}}</a></li>
             <li class="dropdown">
 	      <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Opciones <span class="caret"></span></a>
 	      <ul class="dropdown-menu">
