remove alias field from tests

--- a/model/tests/tmpl/edit.html
+++ b/model/tests/tmpl/edit.html
@@ -22,12 +22,12 @@
       </div>
 
       <div class="form-group">
-	<label>Alías</label>
-	<input type="text" class="form-control" name="Alias" placeholder="Alías" value="">
+	<label>Curso</label>
+	<input type="text" class="form-control" name="Alias" placeholder="Curso, módulo, ciclo, etc ..." value="">
       </div>
 
       <div class="form-group">
-	<label>Descripción</label>
+	<label>Comentarios iniciales</label>
 	<textarea name="Desc" class="form-control">
 	</textarea>
       </div>
