add test to db done

--- a/model/tests/tmpl/edit.html
+++ b/model/tests/tmpl/edit.html
@@ -23,7 +23,7 @@
 
       <div class="form-group">
 	<label>Curso</label>
-	<input type="text" class="form-control" name="Alias" placeholder="Curso, módulo, ciclo, etc ..." value="">
+	<input type="text" class="form-control" name="Course" placeholder="Curso, módulo, ciclo, etc ..." value="">
       </div>
 
       <div class="form-group">
