--- a/model/tests/tmpl/view.html
+++ b/model/tests/tmpl/view.html
@@ -9,50 +9,28 @@
   </div>
 </div>
 
-<div class="panel label-panel col-md-8 col-md-offset-2">
-  <!-- Panel de etiquetas -->
+<div class="row col-md-8 col-md-offset-2">
+
+  <div class="page-header text-center">
+    <h1>{{.Content.Title}}<br><small>{{.Content.Course}}</small></h1>
+  </div>
+
+  <!-- Etiquetas 
   <div class="row col-md-3">
   {{range .Content.Tags}}
     <span class="label label-default">{{.}}</span>
   {{end}}
-  </div>
+  </div> -->
 
-  <!-- Panel de avisos de pregunta -->
-  <div class="row col-md-1 pull-right">
-    
-  {{if not .Content.Solution}}
-    <a href="/help#no-solution" class="label label-danger">Sin Solución</a>
+  <!-- Descripción -->
+
+  {{if ne .Content.Desc ""}}
+  <div class="panel">
+    {{.Content.Desc}}
+  </div>
   {{end}}
-  </div>
 
-</div>
 
-<div class="panel col-md-8 col-md-offset-2">
-  {{.Content.GetHTMLText}}
-  <hr>
-  
-  <div id="answerPanel" class="row col-md-11 col-md-offset-1">
-
-    {{ if .OptionsSolved }}
-    <div id="solvedPanel">
-       {{.OptionsSolved}}
-      <input type="button" class="btn btn-default pull-right" id="answerUpdateButton" value="Actualizar" />
-    </div>
-    {{end}}
-
-    <div id="unSolvedPanel">
-      <form id="answerEditForm" class="form-group" method="post" action="/answers/add">
-	<input type="hidden" name="QuestId" value="{{ .Content.Id }}">
-	<input type="hidden" name="BodyType" value="{{ .Content.AType }}">
-        {{.OptionsUnSolved}}
-	<input type="button" class="btn btn-default pull-right" id="answerNewSubmit" value="Contestar" />
-	{{ if .OptionsSolved }}
-	<input type="button" class="btn btn-default pull-right" id="answerNewCancel" value="Cancelar" />
-        {{end}}
-      </form>
-    </div>
-
-  </div>
 </div>
 
 {{end}}
