--- a/model/tests/tmpl/view.html
+++ b/model/tests/tmpl/view.html
@@ -15,19 +15,35 @@
     <h1>{{.Content.Title}}<br><small>{{.Content.Course}}</small></h1>
   </div>
 
-  <!-- Etiquetas 
-  <div class="row col-md-3">
+  <!-- Etiquetas -->
+  <div class="panel label-panel">
   {{range .Content.Tags}}
     <span class="label label-default">{{.}}</span>
   {{end}}
-  </div> -->
+  </div> 
 
   <!-- Descripción -->
 
   {{if ne .Content.Desc ""}}
-  <div class="panel">
+  <div class="well">
     {{.Content.Desc}}
   </div>
+  {{end}}
+
+  
+  {{range .Content.Exercises}}
+  <div class="panel">
+    {{.Quest.GetHTMLText}}
+    <div id="solvedPanel" class="row">
+      {{.Quest.GetHTMLSolution}}
+    </div>
+  </div>
+
+
+</div>
+
+
+
   {{end}}
 
 
