--- a/app/tmpl/base.html
+++ b/app/tmpl/base.html
@@ -41,12 +41,12 @@
             <li class="dropdown">
 	      <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Opciones <span class="caret"></span></a>
 	      <ul class="dropdown-menu">
-                {{ if .User.IsAdmin}}
+                {{ if eq .User.GetInfo.RoleName "Administrador"}}
 		<li><a href="/users/main">Usuarios</a></li>
 		<li><a href="/questions/main">Preguntas</a></li>
 		<li><a href="/tests/new">Tests</a></li>
                 {{end}}
-		{{ if .User.IsTeacher}}
+		{{ if eq .User.GetInfo.RoleName "Profesor"}}
 		<li><a href="/questions/main">Preguntas</a></li>
 		<li><a href="/tests/new">Tests</a></li>
 		{{end}}
