--- a/model/users/tmpl/view.html
+++ b/model/users/tmpl/view.html
@@ -15,9 +15,9 @@
 
 <div class="panel col-md-6 col-md-offset-3">
   <h2>{{.Content.Name}}</h2>
-  <p><strong>Rol: </strong>{{.Content.GetStringRole}} </p>
-  <p><strong>Email: </strong>{{.Content.Mail}} </p>
-  <p><strong>Alta: </strong>{{.Content.GetStringTimeStamp}} </p>
+  <p><strong>Rol: </strong>{{.Content.GetInfo.RoleName}} </p>
+  <p><strong>Email: </strong>{{.Content.GetEmail}} </p>
+  <p><strong>Alta: </strong>{{.Content.GetInfo.TimeStamp}} </p>
   <p><strong>Etiquetas: </strong></p>
   {{range .Content.Tags}}
     <span class="label label-default">{{.}}</span>
