--- a/model/tests/tmpl/view.html
+++ b/model/tests/tmpl/view.html
@@ -5,6 +5,8 @@
   <div class="row col-md-12 ">
     <ul class="nav nav-pills text-right">
       <li role="presentation" class="active"><a href="#" onclick="window.history.back()" >Volver</a></li>
+      <li role="presentation" ><a href="/tests/edit?id={{.Content.Id}}">Editar</a></li>
+      <li role="presentation" ><a href="/tests/delete?id={{.Content.Id}}">Borrar</a></li>
     </ul>
   </div>
 </div>
