edit tests done

--- a/model/tests/tmpl/edit.html
+++ b/model/tests/tmpl/edit.html
@@ -3,7 +3,7 @@
 <div class="form-group col-md-12">
   <div class="row col-md-12 ">
     <ul class="nav nav-pills text-right">
-      <li role="presentation" class="active"><a href="#" onclick="window.history.back()" >Volver</a></li>
+      <li role="presentation" class="active"><a href="/tests/get?id={{.Content.Id}}" >Volver</a></li>
     </ul>
   </div>
 </div>
