--- a/model/users/tmpl/edit.html
+++ b/model/users/tmpl/edit.html
@@ -33,21 +33,23 @@
       <div class="form-group">
 	<label>Rol</label>
 	<select class="form-control" id="Role" name="Role">
-          {{if eq .Content.GetInfo.RoleName "Estudiante"}}
-	  <option value="1" selected>Estudiante</option>
+	  {{if .Content}}
+	      {{if eq .Content.GetInfo.RoleName "Administrador"}}
+	      <option value="3" selected>Administrador</option>
+	      <option value="2" >Profesor</option>
+	      <option value="1" >Estudiante</option>
+	      {{end}}
+	      {{if eq .Content.GetInfo.RoleName "Profesor"}}
+	      <option value="3" >Administrador</option>
+	      <option value="2" selected>Profesor</option>
+	      <option value="1" >Estudiante</option>
+	      {{end}}
 	  {{else}}
-	  <option value="1">Estudiante</option>
-          {{end}}
-          {{if eq .Content.GetInfo.RoleName "Profesor"}}
-	  <option value="2" selected>Profesor</option>
-	  {{else}}
-	  <option value="2">Profesor</option>
-          {{end}}
-	  {{if eq .Content.GetInfo.RoleName "Administrador"}}
-	  <option value="3" selected>Administrador</option>
-	  {{else}}
-	  <option value="3">Administrador</option>
-          {{end}}
+	      <option value="3" >Administrador</option>
+	      <option value="2" >Profesor</option>
+	      <option value="1" selected>Estudiante</option>
+	  {{end}}
+	  
 	</select>
       </div>
 
