--- a/app/tmpl/studentWelcome.html
+++ b/app/tmpl/studentWelcome.html
@@ -1,11 +1,20 @@
 {{define "content"}}
 
 <div class="container" id="content">
-  <div class="page-header ">
-    <h1 class="text-left">Bienvenido {{.User.Name}}</h1>
-    <div class="well well-sm entete"></div>
+
+
+  <!-- Tests panel  -->
+  <div class="panel panel-default">
+    <div class="panel-heading panel-title">Exámenes abiertos</div>
+    <div class="panel-body ">
+      <div class="list-group">
+	{{range .Content}}
+	<a href="/tests/get?=id{{.Id}}" class="list-group-item">{{.Title}} - <small>{{.Course}}</small></a>
+	{{end}}
+      </div>
+    </div>
   </div>
 
-  <p>Eres un simple estudiante</p>
 </div>
+
 {{end}}
