improve answered render with css

--- a/model/questions/tmpl/view.html
+++ b/model/questions/tmpl/view.html
@@ -34,7 +34,7 @@
   <hr>
   
   <div class="row col-md-11 col-md-offset-1">
-      <form class="answer-panel form-group" method="post">
+      <form class="form-group answer-panel solution-panel" method="post">
 	<input type="hidden" name="AuthorId" value="{{ .User.Id }}">
 	<input type="hidden" name="QuestId" value="{{ .Content.Id }}">
 	<input type="hidden" name="ExerciseId" value="0">
